# flutter_zstd_safe

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  zstd_jni.cpp
android/src/main/kotlin/com/example/flutter_zstd_safe/: FlutterZstdSafePlugin.kt
android/src/test/kotlin/com/example/flutter_zstd_safe/: FlutterZstdSafePluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_zstd_safe_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: flutter_zstd_safe.dart
test/: flutter_zstd_safe_test.dart
